Added single-target LibANetstandard20 dependency to LibB - NuGet pack still not including the referenced project outputs.

--- a/LibB/LibB.csproj
+++ b/LibB/LibB.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,6 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LibANetstandard20\LibANetstandard20.csproj">
+      <Private>true</Private>
+    </ProjectReference>
     <ProjectReference Include="..\LibA\LibA.csproj">
       <Private>true</Private>
     </ProjectReference>
